# warum

./: CMakeLists.txt  README.md  config.h.in  main.c  pk.qwerty12.warum.xml
etc/: iptables_rules.sh  pk.qwerty12.warum.conf  warum.service.in
warumtray/: CMakeLists.txt  warumbus.cpp  warumbus.h  warumbus.xml  warumtray.cpp
